--- a/info.toml
+++ b/info.toml
@@ -1,5 +1,7 @@
 title = "Postgame WWW Base Music"
-version = "1.0.1"
+version = "1.1.0"
 authors = [ "Prof. 9" ]
 unsafe = true
-requires_loader_version = ">=0.8.1"
+url = "https://forums.therockmanexezone.com/mmbnlc-pc-postgame-www-base-music-mod-exe6-t16739.html"
+requires_loader_version = ">=0.11.0"
+requires_game = ["Vol2"]
